==> mrdean05/LoRaWAN-based-Data-Collector/src/Board/Src/rtc-board.c <==
#include <stdio.h>
#include <stdbool.h>
#include "rtc-board.h"
#include "systime.h"
#include "stm32f4xx.h"
#include "stm32f4xx_hal.h"
#include "stm32f4xx_hal_rtc.h"
#include "stm32f4xx_hal_rtc_ex.h"
#define N_PREDIV_S                                   8
#define PREDIV_S                                     255
#define PREDIV_A                                     127
#define WAKE_UP_TICK                                 3
#define DAYS_IN_LEAP_YEAR                            (( uint32_t )  366U )
#define DAYS_IN_YEAR                                 (( uint32_t )  365U )
#define SECONDS_IN_1DAY                              (( uint32_t )86400U )
#define SECONDS_IN_1HOUR                             (( uint32_t ) 3600U )
#define SECONDS_IN_1MINUTE                           (( uint32_t )   60U )
#define MINUTES_IN_1HOUR                             (( uint32_t )   60U )
#define HOURS_IN_1DAY                                (( uint32_t )   24U )
#define ALARM_SUBSECOND_MASK                        ( N_PREDIV_S << RTC_ALRMASSR_MASKSS_Pos )
#define  DAYS_IN_MONTH_CORRECTION_NORM               (( uint32_t )0x99AAA0 )
#define  DAYS_IN_MONTH_CORRECTION_LEAP               (( uint32_t )0x445550 )
#define DIVC( X, N )                                 (( ( X ) + ( N ) -1 ) / ( N ) )

void RtcInit( void ){
    
    #ifdef DEBUG_RTC
    printf("RTC initilization\r\n");
    #endif
    
    if (RtcInitialized == false){

    __HAL_RCC_RTC_ENABLE();

    /* Initialize the RTC */
    RTC_HandleStruct.Instance = RTC;
    RTC_HandleStruct.Init.HourFormat = RTC_HOURFORMAT_24;
    RTC_HandleStruct.Init.AsynchPrediv = PREDIV_A;
    RTC_HandleStruct.Init.SynchPrediv = PREDIV_S;
    RTC_HandleStruct.Init.OutPut = RTC_OUTPUT_DISABLE;
    RTC_HandleStruct.Init.OutPutPolarity = RTC_OUTPUT_POLARITY_HIGH;
    RTC_HandleStruct.Init.OutPutType = RTC_OUTPUT_TYPE_OPENDRAIN;
    // RTC_HandleStruct.Lock = HAL_UNLOCKED;
    // RTC_HandleStruct.State = HAL_RTC_STATE_RESET;

    if ( HAL_RTC_Init(&RTC_HandleStruct) != HAL_OK ) printf("Error Initializing the RTC\n");
    
    RTC_TimeTypeDef RTC_TimeStruct;
    RTC_DateTypeDef RTC_DateStruct;

    /* Setting up Time and Date */
    RTC_TimeStruct.Hours = 0;
    RTC_TimeStruct.Minutes = 0;
    RTC_TimeStruct.Seconds = 0;
    RTC_TimeStruct.SubSeconds = 0;
    RTC_TimeStruct.TimeFormat = 0;
    RTC_TimeStruct.DayLightSaving = RTC_DAYLIGHTSAVING_NONE;
    RTC_TimeStruct.StoreOperation = RTC_STOREOPERATION_RESET;

    if ( HAL_RTC_SetTime(&RTC_HandleStruct, &RTC_TimeStruct, RTC_FORMAT_BIN) != HAL_OK ) printf("Error Setting up RTC Time\n");
    
    RTC_DateStruct.WeekDay = RTC_WEEKDAY_MONDAY;
    RTC_DateStruct.Month = RTC_MONTH_JANUARY;
    RTC_DateStruct.Date = 1;
    RTC_DateStruct.Year = 0;
    if ( HAL_RTC_SetDate(&RTC_HandleStruct, &RTC_DateStruct, RTC_FORMAT_BIN) != HAL_OK) printf("Error Setting up RTC Date \n");
    
    HAL_RTCEx_EnableBypassShadow(&RTC_HandleStruct);

    HAL_NVIC_SetPriority(RTC_Alarm_IRQn, 3, 0);
    HAL_NVIC_EnableIRQ(RTC_Alarm_IRQn);

    HAL_RTC_DeactivateAlarm( &RTC_HandleStruct, RTC_ALARM_A );

    #ifdef DEBUG_RTC
    printf("Setting time.........: \n");
    printf("SubSeconds: %ld\n", RTC_TimeStruct.SubSeconds);
    printf("Seconds: %d\n", RTC_TimeStruct.Seconds);
    printf("Minutes: %d\n", RTC_TimeStruct.Minutes);
    printf("Hours: %d\n", RTC_TimeStruct.Hours);

    printf("WeekDay: %d\n", RTC_DateStruct.WeekDay);
    printf("Month: %d\n", RTC_DateStruct.Month);
    printf("Date: %d\n", RTC_DateStruct.Date);
    printf("Year: %d\n", RTC_DateStruct.Year);
    #endif

    RtcSetTimerContext();
    RtcInitialized = true;
    }
}

void RtcDelayMs( TimerTime_t milliseconds ){

    #ifdef DEBUG_RTC
    printf("RTC RtcDelayMs\r\n");
    #endif
    
    /* Get the time now in ticks */
    uint32_t timeNowTicks = RtcGetTimerValue();

    /* Get the milliseconds in ticks */
    uint32_t delayTimeTicks = RtcMs2Tick(milliseconds);

    while ((RtcGetTimerValue() - timeNowTicks) < delayTimeTicks);
}

void RtcStopAlarm( void ){
    
    #ifdef DEBUG_RTC
    printf("RTC RtcStopAlarm\r\n");
    #endif
    
    HAL_RTC_DeactivateAlarm(&RTC_HandleStruct, RTC_ALARM_A);

    __HAL_RTC_ALARM_CLEAR_FLAG( &RTC_HandleStruct, RTC_FLAG_ALRAF );
    __HAL_RTC_ALARM_EXTI_CLEAR_FLAG( );

}

void RtcStartAlarm( uint32_t timeout ){
    
    RtcStopAlarm();
    
    #ifdef DEBUG_RTC
    printf("RTC RtcStartAlarm\r\n");
    #endif

    uint16_t rtcAlarmDays = 0;
    uint16_t rtcAlarmHours = 0;
    uint16_t rtcAlarmMinutes = 0;
    uint16_t rtcAlarmSeconds = 0;
    uint16_t rtcAlarmSubseconds = 0;

    RTC_TimeTypeDef RTC_TimeNow = RTC_TimeContext;
    RTC_DateTypeDef RTC_DateNow = RTC_DateContext;

    /* The size of the subseconds is determined by the sync prescaler
     * To determine the subsecond of the timeout in ticks, timeout AND(&) sync prescaler
     * To determine the future time(timeout and current subseconds) for subsecond: 
     *  1. Substract the current sunseconds from the sync prescale.
     *  2. Add the result to the subsecond of the timeout in ticks (timeout AND(&) sync prescaler)
    */

    rtcAlarmSubseconds = PREDIV_S - RTC_TimeNow.SubSeconds;
    rtcAlarmSubseconds += (timeout & PREDIV_S);

    /* To subtract the subseconds from the timeout, right shift by N_PREDIV_S(subsecond num of bits)*/
    timeout >>= N_PREDIV_S;    // timeout = timeout >> N_PREDIV_S; 

    rtcAlarmDays = RTC_DateNow.Date;
    while (timeout >= TM_SECONDS_IN_1DAY){
        timeout -= TM_SECONDS_IN_1DAY;
        rtcAlarmDays++;
    }

    /* Calculate the hours */
    rtcAlarmHours = RTC_TimeNow.Hours;
    while (timeout >= TM_SECONDS_IN_1HOUR){
        timeout -= TM_SECONDS_IN_1HOUR;
        rtcAlarmHours++;
    }

    /* Calculate the minutes */
    rtcAlarmMinutes = RTC_TimeNow.Minutes;
    while (timeout >= TM_SECONDS_IN_1MINUTE){
        timeout -= TM_SECONDS_IN_1MINUTE;
        rtcAlarmMinutes++;
    }
    rtcAlarmSeconds = timeout + RTC_TimeNow.Seconds; // + currenttime

    /* Corrections */
    while (rtcAlarmSubseconds >= (PREDIV_S + 1)){
        rtcAlarmSubseconds -= (PREDIV_S + 1);
        rtcAlarmSeconds++;
    }

    while (rtcAlarmSeconds >= TM_SECONDS_IN_1MINUTE){
        rtcAlarmSeconds -= TM_SECONDS_IN_1MINUTE;
        rtcAlarmMinutes++;
    }

    while (rtcAlarmMinutes >= TM_MINUTES_IN_1HOUR){
        rtcAlarmMinutes -= TM_MINUTES_IN_1HOUR;
        rtcAlarmMinutes++;
    }

    while (rtcAlarmHours >= TM_HOURS_IN_1DAY){
        rtcAlarmHours -= TM_HOURS_IN_1DAY;
        rtcAlarmDays++;
    }

    
    if( RTC_DateNow.Year % 4 == 0 ) 
    {
        if( rtcAlarmDays > DaysInMonthLeapYear[RTC_DateNow.Month - 1] )
        {
            rtcAlarmDays = rtcAlarmDays % DaysInMonthLeapYear[RTC_DateNow.Month - 1];
        }
    }
    else
    {
        if( rtcAlarmDays > DaysInMonth[RTC_DateNow.Month - 1] )
        {   
            rtcAlarmDays = rtcAlarmDays % DaysInMonth[RTC_DateNow.Month - 1];
        }
    }

    RTC_AlarmStruct.AlarmTime.Hours = rtcAlarmHours;
    RTC_AlarmStruct.AlarmTime.Minutes = rtcAlarmMinutes;
    RTC_AlarmStruct.AlarmTime.Seconds = rtcAlarmSeconds;
    RTC_AlarmStruct.AlarmTime.SubSeconds = PREDIV_S - rtcAlarmSubseconds;
    RTC_AlarmStruct.AlarmSubSecondMask = ALARM_SUBSECOND_MASK;
    RTC_AlarmStruct.AlarmTime.DayLightSaving = RTC_DAYLIGHTSAVING_NONE;
    RTC_AlarmStruct.AlarmTime.TimeFormat = RTC_TimeNow.TimeFormat;
    RTC_AlarmStruct.AlarmTime.StoreOperation = RTC_STOREOPERATION_RESET;
    RTC_AlarmStruct.AlarmMask = RTC_ALARMMASK_NONE;
    RTC_AlarmStruct.AlarmDateWeekDaySel = RTC_ALARMDATEWEEKDAYSEL_DATE;
    RTC_AlarmStruct.AlarmDateWeekDay = (uint8_t) rtcAlarmDays;
    RTC_AlarmStruct.Alarm = RTC_ALARM_A;

    #ifdef DEBUG_RTC
    printf("Setting Alarm time.......\n");
    printf("SubSeconds: %ld\n",  RTC_AlarmStruct.AlarmTime.SubSeconds);
    printf("Seconds: %d\n", RTC_AlarmStruct.AlarmTime.Seconds);
    printf("Minutes: %d\n", RTC_AlarmStruct.AlarmTime.Minutes);
    printf("Hours: %d\n", RTC_AlarmStruct.AlarmTime.Hours);
    #endif

    if ( HAL_RTC_SetAlarm_IT(&RTC_HandleStruct, &RTC_AlarmStruct, RTC_FORMAT_BIN) != HAL_OK) printf("Error Setting up RTC Alarm \n");
}

uint32_t RtcSetTimerContext( void ){
    
    #ifdef DEBUG_RTC
    printf("RTC RtcSetTimerContext\r\n");
    #endif
    
    TimeTicks = RtcGetDateTime(&RTC_DateContext, &RTC_TimeContext);
    return (uint32_t)TimeTicks;
}

uint32_t RtcGetTimerContext( void ){

    #ifdef DEBUG_RTC
    printf("RTC RtcGetTimerContext\r\n");
    #endif
    return TimeTicks;
}

uint32_t RtcGetTimerElapsedTime( void ){
    RTC_TimeTypeDef time;
    RTC_DateTypeDef date;

    #ifdef DEBUG_RTC
    printf("RTC RtcGetTimerElapsedTime\r\n");
    #endif
    uint32_t timeInTicks = (uint32_t)RtcGetDateTime(&date, &time);
    return((uint32_t)(timeInTicks  - TimeTicks));    
}

uint32_t RtcGetCalendarTime( uint16_t *milliseconds ){
    RTC_TimeTypeDef time;
    RTC_DateTypeDef date;
    
    #ifdef DEBUG_RTC
    printf("RTC RtcGetCalendarTime\r\n");
    #endif
    
    uint64_t timeInTicks = RtcGetDateTime(&date, &time);
    *milliseconds = RtcTick2Ms((timeInTicks & PREDIV_S));
    return (uint32_t)(timeInTicks >> N_PREDIV_S);
}

uint32_t RtcGetTimerValue( void ){
    RTC_TimeTypeDef time;
    RTC_DateTypeDef date;

    #ifdef DEBUG_RTC
    printf("RTC RtcGetTimerValue\r\n");
    #endif
    
    uint32_t timeInTicks = (uint32_t)RtcGetDateTime(&date, &time);
    return timeInTicks;
}

void RtcBkupWrite( uint32_t data0, uint32_t data1){
    
    #ifdef DEBUG_RTC
    printf("RTC RtcBkupWrite\r\n");
    #endif
    
    HAL_RTCEx_BKUPWrite(&RTC_HandleStruct, RTC_BKP_DR0, data0);
    HAL_RTCEx_BKUPWrite(&RTC_HandleStruct, RTC_BKP_DR1, data1);
}

void RtcBkupRead ( uint32_t* data0, uint32_t* data1 ){
    *data0 = HAL_RTCEx_BKUPRead(&RTC_HandleStruct, RTC_BKP_DR0);
    *data1 = HAL_RTCEx_BKUPRead(&RTC_HandleStruct, RTC_BKP_DR1);
}
