==> alibaba/AliOS-Things/platform/board/eml3047/src/rtc-board.c <==
#include "hw.h"
#include "low_power.h"
#include "system/timer.h"
#define MIN_ALARM_DELAY               3 /* in ticks */
#define N_PREDIV_S                 10
#define PREDIV_S                  ((1 << N_PREDIV_S) - 1)
#define PREDIV_A                  ((1 << (15 - N_PREDIV_S)) - 1)
#define HW_RTC_ALARMSUBSECONDMASK_SS14_10     ((uint32_t) (RTC_ALRMASSR_MASKSS_1 | RTC_ALRMASSR_MASKSS_3))
#define HW_RTC_ALARMSUBSECONDMASK HW_RTC_ALARMSUBSECONDMASK_SS14_10
#define USEC_NUMBER               1000000
#define MSEC_NUMBER               (USEC_NUMBER / 1000)
#define RTC_ALARM_TIME_BASE       (USEC_NUMBER >> N_PREDIV_S)
#define COMMON_FACTOR        3
#define CONV_NUMER                (MSEC_NUMBER >> COMMON_FACTOR)
#define CONV_DENOM                (1 << (N_PREDIV_S - COMMON_FACTOR))
#define HW_RTC_EXTI_LINE_ALARM_EVENT LL_EXTI_LINE_17
#define CALENDAR_VALUE(subsec, sec, min, hours, days)  \
  ((((sec) + 60 * ((min) + 60 * ((hours) + 24 * (days)))) << N_PREDIV_S) + (PREDIV_S - (subsec)))
#define ADJUST_TIME(_x_, _y_, _t_) \
  while ((_x_) >= (_t_)) { \
    (_x_) -= (_t_); \
    (_y_)++; \
  }

void RtcInit( void )
{
    if ( HW_RTC_Initalized == RESET )
    {
        HW_RTC_SetConfig( );
        HW_RTC_SetAlarmConfig( );
        RtcSetTimerContext( );
        HW_RTC_Initalized = SET;
    }
}

uint32_t RtcGetTimerElapsedTime( void )
{
    HW_RTC_TimeTypeDef RTC_TimeStruct;
    HW_RTC_DateTypeDef RTC_DateStruct;

    TimerTime_t CalendarValue = RtcGetCalendarValue( &RTC_DateStruct, &RTC_TimeStruct );

    return ((uint32_t) (CalendarValue - RtcTimerContext.Rtc_Time));
}

uint32_t RtcGetTimerValue( void )
{
    HW_RTC_TimeTypeDef RTC_TimeStruct;
    HW_RTC_DateTypeDef RTC_DateStruct;

    uint32_t CalendarValue = (uint32_t) RtcGetCalendarValue( &RTC_DateStruct, &RTC_TimeStruct );

    return (CalendarValue);
}

void RtcStopAlarm( void )
{
    /* Clear RTC Alarm Flag */
    LL_RTC_ClearFlag_ALRA( RTC );

    /* Disable the Alarm A interrupt */
    HW_RTC_DeactivateAlarm( );
}

void RtcDelayMs( uint32_t delay )
{
    TimerTime_t delayValue = 0;
    TimerTime_t timeout = 0;

    delayValue = RtcMs2Tick( delay );

    /* Wait delay ms */
    timeout = RtcGetTimerValue( );
    while ( ((RtcGetTimerValue( ) - timeout)) < delayValue )
    {
        __NOP( );
    }
}

uint32_t RtcSetTimerContext( void )
{
    RtcTimerContext.Rtc_Time = RtcGetCalendarValue( &RtcTimerContext.RTC_Calndr_Date,
                                                        &RtcTimerContext.RTC_Calndr_Time );
    return (uint32_t) RtcTimerContext.Rtc_Time;
}

uint32_t RtcGetTimerContext( void )
{
    return (uint32_t) RtcTimerContext.Rtc_Time;
}

void RtcStartAlarm( uint32_t timeoutValue )
{
    uint16_t rtcAlarmSubSeconds;
    uint16_t rtcAlarmSeconds;
    uint16_t rtcAlarmMinutes;
    uint16_t rtcAlarmHours;
    uint16_t rtcAlarmDays;
    uint8_t day_in_month;
    HW_RTC_TimeTypeDef RTC_TimeStruct = RtcTimerContext.RTC_Calndr_Time;
    HW_RTC_DateTypeDef RTC_DateStruct = RtcTimerContext.RTC_Calndr_Date;

    RtcStopAlarm( );

    /*reverse counter */
    rtcAlarmSubSeconds = PREDIV_S - RTC_TimeStruct.SubSeconds;
    rtcAlarmSubSeconds += (timeoutValue & PREDIV_S);
    /* convert timeout  to seconds */
    timeoutValue >>= N_PREDIV_S; /* convert timeout  in seconds */

    /*convert microsecs to RTC format and add to 'Now' */
    rtcAlarmDays = RTC_DateStruct.Day;
    ADJUST_TIME( timeoutValue, rtcAlarmDays, SecondsInDay );

    /* calc hours */
    rtcAlarmHours = RTC_TimeStruct.Hours;
    ADJUST_TIME( timeoutValue, rtcAlarmHours, SecondsInHour );

    /* calc minutes */
    rtcAlarmMinutes = RTC_TimeStruct.Minutes;
    ADJUST_TIME( timeoutValue, rtcAlarmMinutes, SecondsInMinute );

    /* calc seconds */
    rtcAlarmSeconds = RTC_TimeStruct.Seconds + timeoutValue;

    /***** correct for modulo********/
    ADJUST_TIME( rtcAlarmSubSeconds, rtcAlarmSeconds, (PREDIV_S + 1) );
    ADJUST_TIME( rtcAlarmSeconds, rtcAlarmMinutes, SecondsInMinute );
    ADJUST_TIME( rtcAlarmMinutes, rtcAlarmHours, MinutesInHour );
    ADJUST_TIME( rtcAlarmHours, rtcAlarmDays, HoursInDay );

    /* Day in month, adjusted to take into account leap years */
    day_in_month = DaysInMonth[RTC_DateStruct.Month - 1];
    if ( ((RTC_DateStruct.Year % 4) == 0) && (RTC_DateStruct.Month == 2) )
    {
        day_in_month++;
    }

    while ( rtcAlarmDays > day_in_month )
    {
        rtcAlarmDays = (rtcAlarmDays - day_in_month);
    }

    /* Set RTC_AlarmStructure with calculated values*/
    /* Code from HAL_RTC_SetAlarm_IT / LL_RTC_ALMA_Init */
    LL_RTC_DisableWriteProtection( RTC );

    /* Disable the Alarm A interrupt */
    LL_RTC_ALMA_Disable( RTC );
    LL_RTC_ClearFlag_ALRA( RTC );
    /* Wait till RTC ALRxWF flag is set */
    while ( !LL_RTC_IsActiveFlag_ALRAW( RTC ) )
    {
        ;
    }

    LL_RTC_ALMA_SetSubSecond( RTC, PREDIV_S - rtcAlarmSubSeconds );
    LL_RTC_ALMA_SetSubSecondMask( RTC, ((HW_RTC_ALARMSUBSECONDMASK) >> (RTC_POSITION_ALMA_MASKSS )) );
    LL_RTC_ALMA_ConfigTime( RTC, RTC_TimeStruct.TimeFormat,
                            HW_RTC_ByteToBcd2( rtcAlarmHours ),
                            HW_RTC_ByteToBcd2( rtcAlarmMinutes ),
                            HW_RTC_ByteToBcd2( rtcAlarmSeconds ) );
    LL_RTC_ALMA_DisableWeekday( RTC );
    LL_RTC_ALMA_SetDay( RTC, HW_RTC_ByteToBcd2( rtcAlarmDays ) );
    LL_RTC_ALMA_SetMask( RTC, LL_RTC_ALMA_MASK_NONE );
    LL_RTC_TIME_DisableDayLightStore( RTC );

    /* Configure the Alarm state: Enable Alarm */
    LL_RTC_ALMA_Enable( RTC );

    /* Configure the Alarm interrupt */
    LL_RTC_EnableIT_ALRA( RTC );

    /* RTC Alarm Interrupt Configuration: EXTI configuration */
    LL_EXTI_EnableIT_0_31( HW_RTC_EXTI_LINE_ALARM_EVENT );
    LL_EXTI_EnableRisingTrig_0_31( HW_RTC_EXTI_LINE_ALARM_EVENT );

    /* Enable the write protection for RTC registers */
    LL_RTC_EnableWriteProtection( RTC );

    /* Debug Printf*/
    DBG( RtcGetCalendarValue( &RTC_DateStruct, &RTC_TimeStruct )
    ;);
#if 0
  DBG_PRINTF("it's %d:%d:%d:%d ", RTC_TimeStruct.Hours, RTC_TimeStruct.Minutes, RTC_TimeStruct.Seconds, ((PREDIV_S - RTC_TimeStruct.SubSeconds) * 1000) >> N_PREDIV_S);
#endif
}

uint32_t RtcGetCalendarTime( uint16_t *milliseconds )
{
    HW_RTC_TimeTypeDef RTC_TimeStruct ;
    HW_RTC_DateTypeDef RTC_DateStruct;
    uint32_t ticks;

    uint64_t calendarValue = RtcGetCalendarValue( &RTC_DateStruct, &RTC_TimeStruct );

    uint32_t seconds = ( uint32_t )calendarValue >> N_PREDIV_S;

    ticks =  ( uint32_t )calendarValue & PREDIV_S;

    *milliseconds = RtcTick2Ms( ticks );

    return seconds;
}

void RtcBkupWrite( uint32_t data0, uint32_t data1 )
{
    LL_RTC_BAK_SetRegister(RTC, RTC_BKP_DR0, data0);
    LL_RTC_BAK_SetRegister(RTC, RTC_BKP_DR1, data1);
}

void RtcBkupRead( uint32_t *data0, uint32_t *data1 )
{
    *data0 = LL_RTC_BAK_GetRegister(RTC, RTC_BKP_DR0);
    *data1 = LL_RTC_BAK_GetRegister(RTC, RTC_BKP_DR1);
}
